# mvbuild-c

./: .gitignore  CMakeLists.txt  README.md
lib/stb/: stretchy_buffer.h
src/: main.c
src/cmd/: cmd.c  cmd.h
src/cp/: cp.c  cp.h
src/wnd/: wnd.c  wnd.h
